--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,13 @@
 			<version>2.3.29</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 
 	</dependencies>
 
