--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -11,3 +11,5 @@ im.use_random_name=true
 app.new_user_robot_friend=true
 app.robot_friend_id=FireRobot
 app.robot_welcome=欢迎语要自己想想！
+app.multimedia_url=nginx_url/user
+app.multimedia_path=/usr/local/im-app_server/multimedia
