--- a/config_backup/app.properties
+++ b/config_backup/app.properties
@@ -9,5 +9,5 @@ app.use_random_name=true
 
 # 新用户注册时，自动添加机器人为好友。这里可以修改为添加销售人员id，或者客服人员id，用户跟客户进行沟通。
 app.new_user_robot_friend=true
-app.robot_friend_id=FireRobot
+app.robot_friend_id=YrRobot
 app.robot_welcome=欢迎语要自己想想！
