--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -9,7 +9,36 @@ im.use_random_name=true
 
 # 新用户注册时，自动添加机器人为好友。这里可以修改为添加销售人员id，或者客服人员id，用户跟客户进行沟通。
 app.new_user_robot_friend=true
-app.robot_friend_id=FireRobot
+app.robot_friend_id=YrRobot
 app.robot_welcome=欢迎语要自己想想！
 app.multimedia_url=nginx_url/user
 app.multimedia_path=/usr/local/im-app_server/multimedia
+
+
+
+spring.message.encoding=UTF-8
+server.port=8888
+
+# 短信服务提供商，1是腾讯，2是阿里云
+sms.verdor=1
+# 在没有短信服务器时可以使用super code进行登录，上线时需要删除掉，或者改为较为严格的密码。
+sms.super_code=66666
+
+
+# PC快速登录兼容旧的版本。仅当已经有未支持PC快速登录的移动端上线了，需要兼容时打开此开关。
+wfc.compat_pc_quick_login=false
+
+# 用户上传协议日志存放目录，上线时请修改可用路径
+logs.user_logs_path=/Users/imhao/wildfire_user_logs/
+
+# *************************** 上线必看 *********************************
+# demo工程为了方便大家运行测试，使用了数据库作为SessionDao的缓存，上线后，当用户较多时会是一个瓶颈，请在上线前切换成redis的缓存。
+# 细节请参考 https://www.baidu.com/s?wd=shiro+redis&tn=84053098_3_dg&ie=utf-8
+
+# 小程序不能播放amr格式的音频，需要将amr转化成mp3格式
+# amr转mp3缓存目录，本目录会存储转换后的mp3文件，可以定时清理
+wfc.audio.cache.dir=/data/wfc/audio/cache
+
+# 是否支持SSL，如果所有客户端调用appserver都支持https，请把下面开关设置为true，否则为false。
+# 如果为false，在Web端和wx端的appserve的群公告等功能将不可用。
+wfc.all_client_support_ssl=false
