用户动态功能

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -11,8 +11,8 @@ im.use_random_name=true
 app.new_user_robot_friend=true
 app.robot_friend_id=YrRobot
 app.robot_welcome=欢迎语要自己想想！
-app.multimedia_url=nginx_url/user
-app.multimedia_path=/usr/local/im-app_server/multimedia
+app.multimedia_url=http://121.37.181.23:9090
+app.multimedia_path=/Users/dengbp/Downloads
 
 
 
