--- a/pom.xml
+++ b/pom.xml
@@ -320,7 +320,35 @@
 
 
 
+
 		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacpp</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacv</artifactId>
+			<version>1.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>ffmpeg-platform</artifactId>
+			<version>4.0.2-1.4.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.bytedeco.javacpp-presets</groupId>
+			<artifactId>opencv-platform</artifactId>
+			<version>3.4.1-1.4.1</version>
+		</dependency>
+
+
+
+
+		<!--<dependency>
 			<groupId>org.bytedeco</groupId>
 			<artifactId>javacv</artifactId>
 			<version>1.3.1</version>
@@ -387,7 +415,7 @@
 			<artifactId>ffmpeg</artifactId>
 			<version>3.2.1-${javacpp.version}</version>
 			<classifier>linux-x86_64</classifier>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
