--- a/pom.xml
+++ b/pom.xml
@@ -291,37 +291,9 @@
 			<version>0.7</version>
 		</dependency>
 
-		<!--截取视频第一帧-->
+
+		<!--方式一 -->
 		<!--<dependency>
-			<groupId>org.bytedeco</groupId>
-			<artifactId>javacpp</artifactId>
-			<version>1.4.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco</groupId>
-			<artifactId>javacv</artifactId>
-			<version>1.4.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>opencv-platform</artifactId>
-			<version>3.4.1-1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>ffmpeg-platform</artifactId>
-			<version>4.0.2-1.4.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openpnp</groupId>
-			<artifactId>opencv</artifactId>
-			<version>3.4.2-1</version>
-		</dependency>-->
-
-
-
-
-		<dependency>
 			<groupId>org.bytedeco</groupId>
 			<artifactId>javacpp</artifactId>
 			<version>1.4.3</version>
@@ -343,81 +315,45 @@
 			<groupId>org.bytedeco.javacpp-presets</groupId>
 			<artifactId>opencv-platform</artifactId>
 			<version>3.4.1-1.4.1</version>
-		</dependency>
+		</dependency>-->
 
-
-
-
+        <!--方式二 -->
 		<!--<dependency>
 			<groupId>org.bytedeco</groupId>
 			<artifactId>javacv</artifactId>
-			<version>1.3.1</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>flycapture</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>libdc1394</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>libfreenect</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>libfreenect2</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>librealsense</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>videoinput</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>artoolkitplus</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>artoolkitplus</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.bytedeco.javacpp-presets</groupId>
-					<artifactId>flandmark</artifactId>
-				</exclusion>
-			</exclusions>
+			<version>1.4.1</version>
 		</dependency>
-
 		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>opencv</artifactId>
-			<version>3.1.0-${javacpp.version}</version>
-			<classifier>linux-x86_64</classifier>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacpp</artifactId>
+			<version>1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>opencv</artifactId>
-			<version>3.1.0-${javacpp.version}</version>
-			<classifier>windows-x86_64</classifier>
+			<artifactId>opencv-platform</artifactId>
+			<version>3.4.1-1.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>ffmpeg</artifactId>
-			<version>3.2.1-${javacpp.version}</version>
-			<classifier>windows-x86_64</classifier>
-		</dependency>
-		<dependency>
-			<groupId>org.bytedeco.javacpp-presets</groupId>
-			<artifactId>ffmpeg</artifactId>
-			<version>3.2.1-${javacpp.version}</version>
-			<classifier>linux-x86_64</classifier>
+			<artifactId>ffmpeg-platform</artifactId>
+			<version>3.4.2-1.4.1</version>
 		</dependency>-->
 
+        <!--方式三 -->
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacv-platform</artifactId>
+			<version>1.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.bytedeco</groupId>
+			<artifactId>javacv</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 	</dependencies>
+
+
+
 
 	<build>
 		<plugins>
