--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -16,6 +16,21 @@ app.multimedia_path=/Users/dengbp/Downloads/
 
 
 
+# 支付结果通知url
+app.wx.notify_url=http://121.37.181.23:8888/yr-app-server/api/wx/pay/notify
+app.wx.redirect_url=http://xxxx/wechat/auth
+app.wx.app_id=wx99a9b42a858d2e36
+app.wx.wx.app_secret=52be6431018bb56fdb7ed3aea60ff739
+app.wx.mch_id=1609031032
+app.wx.api_key=135300513531592001800212345678dP
+# 微信退款用
+app.wx.cert_path=apiclient_cert.p12
+# 统一下单url
+app.wx.create_order_url=https://api.mch.weixin.qq.com/pay/unifiedorder
+# 申请退款url
+app.wx.refund_url=https://api.mch.wx.qq.com/secapi/pay/refund
+
+
 spring.message.encoding=UTF-8
 server.port=8888
 
