--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -27,6 +27,8 @@ app.wx.api_key=135300513531592001800212345678dP
 app.wx.cert_path=apiclient_cert.p12
 # 统一下单url
 app.wx.create_order_url=https://api.mch.weixin.qq.com/pay/unifiedorder
+# 证书路径
+app.wx.certificate_path=/Users/dengbp/cert/1609031032_20210531_cert/apiclient_cert.p12
 # 申请退款url
 app.wx.refund_url=https://api.mch.wx.qq.com/secapi/pay/refund
 
