--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,13 @@
 			<version>0.0.3</version>
 		</dependency>
 
+		<!-- 短信服务接入-->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>dysmsapi20170525</artifactId>
+			<version>2.0.4</version>
+		</dependency>
+
 
 		<!-- 图形计算  -->
 		<!-- https://mvnrepository.com/artifact/org.locationtech.spatial4j/spatial4j -->
